# ine_fuzzy_rules

./: README.md  ine.py  main.py  setup.cfg  setup.py  test.py
model/: kmeans.py  stepwise.py
preprocess/: join_ine_zurich.py  preprocess_censo.py  preprocess_hogar.py
utils/: algorithm_rules.py  googlemaps_api.py  heatmap.py  map_hogar.py
